--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -4,7 +4,7 @@
   background-color: #FFFFFF;
   color: black;
   min-width: 358px;
-  min-height: 259px;
+  min-height: 100%;
   border-radius: 10px;
   position: relative;
   transition: all 0.5s ease 0s;
@@ -15,6 +15,5 @@
   .popup__content {
     padding: 25px 22px 25px;
     min-width: 238px;
-    min-height: 272px;
   }
 }
