feature(script.js): added some acts like zoom image, open and close cards, add cards, save results

--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,11 +1,12 @@
-.footer {
+.content {
   max-width: 880px;
   min-width: 282px;
-  margin: 0 auto 60px;
+  margin: 0 auto 66px;
 }
 @media screen and (max-width:1279px) {
-  .footer {
+  .content {
+    max-width: 1241px;
     width: calc(100% - 2 * 19px);
-    margin: 0 auto 36px;
+    margin: 0 auto 48px;
   }
 }
