--- a/blocks/element/__text/element__text.css
+++ b/blocks/element/__text/element__text.css
@@ -2,6 +2,5 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 21px;
-  padding-right: 30px;
+  margin: 25px 15px 31px 21px;
 }
