--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,10 +1,10 @@
 .element__title {
-  display: flex;
   color: #000000;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
   width: 180px;
+  margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
