--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,7 +1,7 @@
 .elements {
-  width: 100%;
+  max-width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));
   row-gap: 20px;
   column-gap: 17px;
   margin: 0 0 67px;
