--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,12 +1,14 @@
 .header {
+  max-width: 880px;
+  min-width: 282px;
+  margin: 45px auto 36px;
   display: flex;
-  margin: 0 auto 40px;
-  padding-bottom: 41px;
+  padding-bottom: 40px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 @media screen and (max-width: 1279px) {
   .header {
-    margin: 0 auto 42px;
-    padding-bottom: 31px;
+    margin: 27px auto 42px;
+    padding-bottom: 30px;
   }
 }
