--- a/blocks/popup/__body/popup__body.css
+++ b/blocks/popup/__body/popup__body.css
@@ -1,6 +1,20 @@
 .popup__body {
-  min-height: 100%;
+  width: calc(100% - 2 * 461px);
+  max-height: max-content;
+  margin: 0 auto 0;
+  padding: 34px 36px 37px;
+  position: relative;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: white;
+  background-size: 100%;
+  border-radius: 10px;
+}
+@media screen and (max-width: 1279px){
+	.popup__body{
+		width: 238px;
+    padding: 25px 22px 25px;
+	}
 }
