--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,9 +1,6 @@
 .root {
-  max-width: 880px;
-  min-width: 282px;
-  margin: 45px auto 60px;
   font-family: 'Inter', Arial, sans-serif;
-  background: #000000;
+  background-color: #000000;
   color: #FFFFFF;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -11,11 +8,4 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility; 
-}
-@media screen and (max-width:1279px) {
-  .root {
-    max-width: 1241px;
-    width: calc(100% - 2 * 19px);
-    margin: 28px auto 36px;
-  }
 }
