--- a/pages/index.css
+++ b/pages/index.css
@@ -10,7 +10,9 @@
 /* block element */
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__image/element__image.css);
-@import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__delete-button/element__delete-button.css);
+@import url(../blocks/element/__like-button/element__like-button.css);
+@import url(../blocks/element/__like-button/_active/element__like-button_active.css);
 @import url(../blocks/element/__text/element__text.css);
 @import url(../blocks/element/__title/element__title.css);
 
@@ -24,17 +26,25 @@
 /* block header */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__logo-image/header__logo-image.css);
+
+/* block content */
+@import url(../blocks/content/content.css);
 
 /* block popup */
-@import url(../blocks/popup/__area/popup__area.css);
+@import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__body/popup__body.css);
-@import url(../blocks/popup/__close/popup__close.css);
-@import url(../blocks/popup/__close-image/popup__close-image.css);
+@import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__content/popup__content.css);
-@import url(../blocks/popup/__submit/popup__submit.css);
+@import url(../blocks/popup/__opened/popup__opened.css);
+@import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/popup/__username-edit/popup__username-edit.css);
+
+@import url(../blocks/popup/__full-img/popup__full-img.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__img/popup__img.css);
+@import url(../blocks/popup/__description/popup__description.css);
 
 /* block profile */
 @import url(../blocks/profile/profile.css);
