--- a/pages/index.css
+++ b/pages/index.css
@@ -37,6 +37,7 @@
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__content/popup__content.css);
 @import url(../blocks/popup/__opened/popup__opened.css);
+@import url(../blocks/popup/__opened/_dark/popup__opened_dark.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/popup/__title/popup__title.css);
