--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -4,9 +4,9 @@
   justify-content: center;
   background: black;
   color: #fff;
-  padding-top: 14px;
-  padding-bottom: 18px;
+  padding: 14px 0 18px;
   border-radius: 2px;
+  border: 0;
   text-decoration: none;
   font-weight: 400;
   font-size: 18px;
