--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -2,15 +2,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   background-color: #FFFFFF;
   color: black;
-  min-width: 358px;
+  width: 358px;
   min-height: 100%;
   border-radius: 10px;
 }
+
 @media screen and (max-width: 1279px) {
   .popup__content {
-    min-width: 238px;
+    width: 238px;
   }
 }
