--- a/pages/index.css
+++ b/pages/index.css
@@ -36,10 +36,13 @@
 @import url(../blocks/popup/__body/popup__body.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__content/popup__content.css);
+@import url(../blocks/popup/__error-message/popup__error-message.css);
 @import url(../blocks/popup/__opened/popup__opened.css);
 @import url(../blocks/popup/__opened/_dark/popup__opened_dark.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/__submit-button/_disable/popup__submit-button_disable.css);
 @import url(../blocks/popup/__text/popup__text.css);
+@import url(../blocks/popup/__text/_type/popup__text_type_error.css);
 @import url(../blocks/popup/__title/popup__title.css);
 
 @import url(../blocks/popup/__full-img/popup__full-img.css);
