fixed(css-files): changed posisions of inputs

--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -4,6 +4,7 @@
   justify-content: center;
   background: black;
   color: #fff;
+  margin-top: 24px;
   padding: 14px 0 18px;
   border-radius: 2px;
   border: 0;
