--- a/blocks/popup/__body/popup__body.css
+++ b/blocks/popup/__body/popup__body.css
@@ -1,9 +1,8 @@
 .popup__body {
+  margin: auto;
   max-width: 430px;
-  max-height: max-content;
-  margin: 0 auto 0;
   padding: 34px 36px 37px;
-  position: relative;
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
