--- a/blocks/popup/__error-message/popup__error-message.css
+++ b/blocks/popup/__error-message/popup__error-message.css
@@ -1,24 +1,12 @@
 .popup__error-message {
-  height: 20px;
+  min-height: 30px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  margin: 0 0 13px;
   padding: 0;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
   color: #ff0000;
-  
-}
-
-.popup__error-message:last-of-type {
-  margin: 0 0 31px;
-}
-
-@media screen and (max-width: 1279px) {
-  .popup__error-message {
-    height: 33px;
-  }
 }
