--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,6 +1,7 @@
 .content {
   max-width: 880px;
   min-width: 282px;
+  height: 75vhmin;
   margin: 0 auto 66px;
 }
 @media screen and (max-width:1279px) {
