--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,8 +1,8 @@
 .element__image {
-  width: 100%;
-  height: 282px;
+  width: 282px;
+  min-height: 282px;
+  max-height: 282px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  /* object-fit: fill; */
   object-fit: cover;
 }
