--- a/blocks/element/__text/element__text.css
+++ b/blocks/element/__text/element__text.css
@@ -1,6 +1,8 @@
 .element__text {
   display: flex;
   justify-content: space-between;
+  align-items: baseline;
+  background-color: white;
   align-items: center;
   margin: 25px 20px 31px 21px;
 }
