--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,4 +1,7 @@
 .element {
+	width: 282px;
+	margin-left: auto;
+	margin-right: auto;
 	position: relative;
 	background-color: white;
 	border-radius: 10px;
