--- a/blocks/popup/__full-img/popup__full-img.css
+++ b/blocks/popup/__full-img/popup__full-img.css
@@ -1,6 +1,3 @@
 .popup__full-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.9);
 }
