--- a/src/blocks/element/__context/element__context.css
+++ b/src/blocks/element/__context/element__context.css
@@ -1,7 +1,6 @@
-.element__text {
+.element__context {
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
   background-color: white;
-  margin: 25px 20px 31px 21px;
+  margin: 20px auto 0px;
 }
