--- a/src/blocks/element/__delete-button/element__delete-button.css
+++ b/src/blocks/element/__delete-button/element__delete-button.css
@@ -2,7 +2,6 @@
   background-image: url(../../../images/trash.png);
   background-color: transparent;
 	background-repeat: no-repeat;
-	background-position: center;
   width: 18px;
   height: 19px;
   position: absolute;
@@ -10,6 +9,7 @@
   right: 20px;
   border: none;
   padding: 0;
+  margin: 0;
   cursor: pointer;
   opacity: 1;
   transition: opacity 0.5s ease-in-out 0s;
