--- a/src/blocks/elements/elements.css
+++ b/src/blocks/elements/elements.css
@@ -1,8 +1,8 @@
 .elements {
   max-width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   row-gap: 20px;
   column-gap: 17px;
-  margin: 0 0 67px;
+  margin: 0 0 67px; 
 }
