--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 .element__like-area{align-items:center;display:flex;flex-direction:column;margin:0;padding:0}
 .element__like-button{background-color:transparent;background-image:url(images/like.df566ffaee24afe1d5ce.png);background-position:50%;background-repeat:no-repeat;border:0;cursor:pointer;height:19px;opacity:1;transition:opacity .5s ease-in-out 0s;width:22px}.element__like-button:hover{opacity:.5}
 .element__like-button_active{background-image:url(images/blacklike.d6753ea74bdb03dad8ea.png)}
-.element__like-number{color:#000;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin:0;text-align:center};
+.element__like-number{color:#000;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin:0;text-align:center}
 .element__context{background-color:#fff;display:flex;justify-content:space-between;margin:20px auto 0}
 .element__title{color:#000;font-size:24px;font-weight:900;line-height:29px;margin:0;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}
 .elements{-moz-column-gap:17px;column-gap:17px;display:grid;grid-template-columns:repeat(auto-fit,minmax(282px,1fr));margin:0 0 67px;max-width:100%;row-gap:20px}
