--- a/src/blocks/element/__context/element__context.css
+++ b/src/blocks/element/__context/element__context.css
@@ -2,5 +2,5 @@
   display: flex;
   justify-content: space-between;
   background-color: white;
-  margin: 20px auto 0px;
+  margin: 25px 15px 21px 21px;
 }
